<resources>
    <string name="app_name">POW</string>

    <string name="client_id">24929797723-1v60ocaddvgo852orqi7c9dl3i9rnaif.apps.googleusercontent.com</string>
    <string name="client_secret">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</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="coin">Claimed</string>
    <string name="referral">Referral</string>
    <string name="invite_amp_earn"><![CDATA[Invite & Earn]]></string>
    <string name="wallet">Balance</string>
    <string name="transactions">Transactions</string>
    <string name="announcement">About Mining</string>
    <string name="notifications">Notifications</string>
    <string name="support">KYC</string>
    <string name="sign_out">Sign Out</string>
    <string name="invite_your_friends">Invite Your Friends</string>
    <string name="invite_your_friend_and_earn_50_coin">Invite your friend and earn POW.</string>
    <string name="invite">INVITE</string>
    <string name="my_referral">MY REFERRALS</string>
    <string name="oops">Oops!</string>

    <string name="notification_channel_name">PowNetwork</string>
    <string name="default_notification_channel_id" translatable="false">pownetwork_mining_default_channel</string>
    <string name="start">START</string>
    <string name="profile">Profile</string>
    <string name="created_on">Register Date</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="one_signal_app_id">59d4e417-d4c7-466e-b11e-c97d6c0f158e</string>
    <string name="use_your_invite_code">Invite Code</string>
    <string name="appodeal_app_id">093d82c8e87c4a75c61cb91b63f08af7a6a7b988c2278843</string>
    <string name="announcement_you_get_30_pow_when_you_press_start_once_every_4_hours_you_earn_50_pow_by_inviting_your_friends">You get 30 POW when you press start once every 4 hours. You earn 50 POW by inviting your friends.</string>
    <string name="balance">BALANCE</string>

    <string name="bannerId">ca-app-pub-4799864564577169/8830865024</string>
    <string name="intersId">ca-app-pub-4799864564577169/8639293332</string>
    <string name="rewardedId">ca-app-pub-4799864564577169/1882313292</string>

    <!--    ca-app-pub-3940256099942544/6300978111-->
    <!--    ca-app-pub-3940256099942544/1033173712-->

    <string name="anons">🗞About mining earnings
\n 0 - 3k members
⛏Mining 30 POW - 👤Reference 50 POW
\n3k - 15k members
⛏Mining 25 POW - 👤Reference 25 POW
\n15k - 30k members
⛏Mining 15 POW - 👤Reference 20 POW
\n30k - 100k members
⛏Mining 10 POW - 👤Reference 15 POW
\n100k - 500k members
⛏Mining 5 POW - 👤Reference 10 POW
\n+500k members
⛏Mining 1 POW - 👤Reference 5 POW</string>

</resources>
