<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InviteActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:titleTextColor="@color/white"
        app:title="@string/invite_amp_earn"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_purple"/>


    <RelativeLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"

        android:layout_height="wrap_content"
        >



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            android:id="@+id/invite_widget"
            app:cardBackgroundColor="@color/app_purple"
            app:cardUseCompatPadding="true">




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bd"
                android:layout_marginBottom="@dimen/_4sdp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/referralLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iBody"
                    android:visibility="gone"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:fontFamily="@font/allerta"
                    android:text="afs"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/iTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:text="@string/invite_your_friends"
                    android:fontFamily="@font/allerta"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_your_friend_and_earn_50_coin"
                    android:id="@+id/iBody"
                    android:textColor="@color/white"
                    android:fontFamily="@font/allerta"
                    android:textSize="13sp"
                    android:layout_below="@id/iTitle"
                    android:layout_marginStart="@dimen/_8sdp"/>



                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@id/iBody"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textStyle="bold"
                    android:src="@drawable/copy_svgrepo_com"
                    android:background="?selectableItemBackgroundBorderless"
                    android:fontFamily="@font/allerta"
                    android:id="@+id/copyBtn"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/_5sdp"/>



            </RelativeLayout>



        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rc_header"
            android:visibility="gone"
            android:layout_below="@id/invite_widget">

            <EditText
                android:id="@+id/referralEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rect_border"
                android:hint="@string/use_your_invite_code"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBtn"
                android:text="Check"
                android:layout_margin="@dimen/_10sdp"
                android:backgroundTint="@color/orange_700"
                android:layout_below="@id/referralEt"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBtn"
                android:id="@+id/recyclerView"/>


        </RelativeLayout>





    </RelativeLayout>



    <com.appodeal.ads.BannerView
        android:id="@+id/bannerAds"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />



</RelativeLayout>